Grammar/generated/functionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\mihan\source\repos\Course\\Grammar\function.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


	using System.Collections;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class functionParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, VAR=27, PI=28, NUMBER=29, WHITESPACE=30;
	public const int
		RULE_function = 0, RULE_expr = 1, RULE_skip = 2, RULE_mul = 3, RULE_div = 4, 
		RULE_pow = 5, RULE_add = 6, RULE_sub = 7, RULE_value = 8, RULE_math_func = 9, 
		RULE_cos = 10, RULE_sin = 11, RULE_tan = 12, RULE_cot = 13, RULE_exponent = 14, 
		RULE_sqrt = 15, RULE_abs = 16, RULE_acos = 17, RULE_asin = 18, RULE_atan = 19, 
		RULE_cosh = 20, RULE_sinh = 21, RULE_tanh = 22, RULE_ln = 23, RULE_log = 24;
	public static readonly string[] ruleNames = {
		"function", "expr", "skip", "mul", "div", "pow", "add", "sub", "value", 
		"math_func", "cos", "sin", "tan", "cot", "exponent", "sqrt", "abs", "acos", 
		"asin", "atan", "cosh", "sinh", "tanh", "ln", "log"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'*'", "'/'", "'^'", "'+'", "'-'", "'cos'", "'sin'", 
		"'tan'", "'cot'", "'e'", "'exp'", "'sqrt'", "'abs'", "'acos'", "'asin'", 
		"'atan'", "'cosh'", "'sinh'", "'tanh'", "'ln'", "'log'", "'_'", "'{'", 
		"'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "VAR", "PI", "NUMBER", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "function.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static functionParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


		public double Var{
			private get;
			set;
		}

		public double Ans{
			get;
			private set;
		}

		public functionParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public functionParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class FunctionContext : ParserRuleContext {
		public ExprContext _expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(functionParser.Eof, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 0, RULE_function);
		try {
			State = 54;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case VAR:
			case PI:
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50; _localctx._expr = expr(0);
				 Ans = _localctx._expr.obj; 
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public double obj;
		public ExprContext op1;
		public ExprContext _expr;
		public Math_funcContext _math_func;
		public ValueContext _value;
		public ExprContext op2;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public Math_funcContext math_func() {
			return GetRuleContext<Math_funcContext>(0);
		}
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public PowContext pow() {
			return GetRuleContext<PowContext>(0);
		}
		public MulContext mul() {
			return GetRuleContext<MulContext>(0);
		}
		public DivContext div() {
			return GetRuleContext<DivContext>(0);
		}
		public AddContext add() {
			return GetRuleContext<AddContext>(0);
		}
		public SubContext sub() {
			return GetRuleContext<SubContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				{
				State = 57; Match(T__0);
				State = 58; _localctx._expr = expr(0);
				State = 59; Match(T__1);
				_localctx.obj =  _localctx._expr.obj;
				}
				break;
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
				{
				State = 62; _localctx._math_func = math_func();
				_localctx.obj =  _localctx._math_func.obj;
				}
				break;
			case VAR:
			case PI:
			case NUMBER:
				{
				State = 65; _localctx._value = value();
				_localctx.obj =  _localctx._value.obj;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 97;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 95;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 70;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 71; pow();
						State = 72; _localctx.op2 = _localctx._expr = expr(8);
						_localctx.obj =   Math.Pow(_localctx.op1.obj, _localctx.op2.obj);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 75;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 76; mul();
						State = 77; _localctx.op2 = _localctx._expr = expr(7);
						_localctx.obj =   _localctx.op1.obj * _localctx.op2.obj;
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 80;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 81; div();
						State = 82; _localctx.op2 = _localctx._expr = expr(6);
						_localctx.obj =   _localctx.op1.obj / _localctx.op2.obj;
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 85;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 86; add();
						State = 87; _localctx.op2 = _localctx._expr = expr(5);
						_localctx.obj =   _localctx.op1.obj + _localctx.op2.obj;
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.op1 = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 90;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 91; sub();
						State = 92; _localctx.op2 = _localctx._expr = expr(4);
						_localctx.obj =   _localctx.op1.obj - _localctx.op2.obj;
						}
						break;
					}
					} 
				}
				State = 99;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class SkipContext : ParserRuleContext {
		public SkipContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skip; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterSkip(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitSkip(this);
		}
	}

	[RuleVersion(0)]
	public SkipContext skip() {
		SkipContext _localctx = new SkipContext(Context, State);
		EnterRule(_localctx, 4, RULE_skip);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MulContext : ParserRuleContext {
		public MulContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mul; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterMul(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitMul(this);
		}
	}

	[RuleVersion(0)]
	public MulContext mul() {
		MulContext _localctx = new MulContext(Context, State);
		EnterRule(_localctx, 6, RULE_mul);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DivContext : ParserRuleContext {
		public DivContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_div; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitDiv(this);
		}
	}

	[RuleVersion(0)]
	public DivContext div() {
		DivContext _localctx = new DivContext(Context, State);
		EnterRule(_localctx, 8, RULE_div);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PowContext : ParserRuleContext {
		public PowContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pow; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterPow(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitPow(this);
		}
	}

	[RuleVersion(0)]
	public PowContext pow() {
		PowContext _localctx = new PowContext(Context, State);
		EnterRule(_localctx, 10, RULE_pow);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AddContext : ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterAdd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitAdd(this);
		}
	}

	[RuleVersion(0)]
	public AddContext add() {
		AddContext _localctx = new AddContext(Context, State);
		EnterRule(_localctx, 12, RULE_add);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubContext : ParserRuleContext {
		public SubContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sub; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitSub(this);
		}
	}

	[RuleVersion(0)]
	public SubContext sub() {
		SubContext _localctx = new SubContext(Context, State);
		EnterRule(_localctx, 14, RULE_sub);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public double obj;
		public IToken _NUMBER;
		public ITerminalNode NUMBER() { return GetToken(functionParser.NUMBER, 0); }
		public ITerminalNode VAR() { return GetToken(functionParser.VAR, 0); }
		public ITerminalNode PI() { return GetToken(functionParser.PI, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 16, RULE_value);
		try {
			State = 118;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; _localctx._NUMBER = Match(NUMBER);
				_localctx.obj =   double.Parse((_localctx._NUMBER!=null?_localctx._NUMBER.Text:null));
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114; Match(VAR);
				_localctx.obj =  Var;
				}
				break;
			case PI:
				EnterOuterAlt(_localctx, 3);
				{
				State = 116; Match(PI);
				_localctx.obj =  Math.PI;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Math_funcContext : ParserRuleContext {
		public double obj;
		public CosContext _cos;
		public SinContext _sin;
		public TanContext _tan;
		public CotContext _cot;
		public ExponentContext _exponent;
		public SqrtContext _sqrt;
		public AbsContext _abs;
		public AcosContext _acos;
		public AsinContext _asin;
		public AtanContext _atan;
		public CoshContext _cosh;
		public SinhContext _sinh;
		public TanhContext _tanh;
		public LnContext _ln;
		public LogContext _log;
		public CosContext cos() {
			return GetRuleContext<CosContext>(0);
		}
		public SinContext sin() {
			return GetRuleContext<SinContext>(0);
		}
		public TanContext tan() {
			return GetRuleContext<TanContext>(0);
		}
		public CotContext cot() {
			return GetRuleContext<CotContext>(0);
		}
		public ExponentContext exponent() {
			return GetRuleContext<ExponentContext>(0);
		}
		public SqrtContext sqrt() {
			return GetRuleContext<SqrtContext>(0);
		}
		public AbsContext abs() {
			return GetRuleContext<AbsContext>(0);
		}
		public AcosContext acos() {
			return GetRuleContext<AcosContext>(0);
		}
		public AsinContext asin() {
			return GetRuleContext<AsinContext>(0);
		}
		public AtanContext atan() {
			return GetRuleContext<AtanContext>(0);
		}
		public CoshContext cosh() {
			return GetRuleContext<CoshContext>(0);
		}
		public SinhContext sinh() {
			return GetRuleContext<SinhContext>(0);
		}
		public TanhContext tanh() {
			return GetRuleContext<TanhContext>(0);
		}
		public LnContext ln() {
			return GetRuleContext<LnContext>(0);
		}
		public LogContext log() {
			return GetRuleContext<LogContext>(0);
		}
		public Math_funcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_math_func; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterMath_func(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitMath_func(this);
		}
	}

	[RuleVersion(0)]
	public Math_funcContext math_func() {
		Math_funcContext _localctx = new Math_funcContext(Context, State);
		EnterRule(_localctx, 18, RULE_math_func);
		try {
			State = 165;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; _localctx._cos = cos();
				_localctx.obj =  _localctx._cos.obj;
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 123; _localctx._sin = sin();
				_localctx.obj =  _localctx._sin.obj;
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126; _localctx._tan = tan();
				_localctx.obj =  _localctx._tan.obj;
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 4);
				{
				State = 129; _localctx._cot = cot();
				_localctx.obj =  _localctx._cot.obj;
				}
				break;
			case T__11:
			case T__12:
				EnterOuterAlt(_localctx, 5);
				{
				State = 132; _localctx._exponent = exponent();
				_localctx.obj =  _localctx._exponent.obj;
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 6);
				{
				State = 135; _localctx._sqrt = sqrt();
				_localctx.obj =  _localctx._sqrt.obj;
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 7);
				{
				State = 138; _localctx._abs = abs();
				_localctx.obj =  _localctx._abs.obj;
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 8);
				{
				State = 141; _localctx._acos = acos();
				_localctx.obj =  _localctx._acos.obj;
				}
				break;
			case T__16:
				EnterOuterAlt(_localctx, 9);
				{
				State = 144; _localctx._asin = asin();
				_localctx.obj =  _localctx._asin.obj;
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 10);
				{
				State = 147; _localctx._atan = atan();
				_localctx.obj =  _localctx._atan.obj;
				}
				break;
			case T__18:
				EnterOuterAlt(_localctx, 11);
				{
				State = 150; _localctx._cosh = cosh();
				_localctx.obj =  _localctx._cosh.obj;
				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 12);
				{
				State = 153; _localctx._sinh = sinh();
				_localctx.obj =  _localctx._sinh.obj;
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 13);
				{
				State = 156; _localctx._tanh = tanh();
				_localctx.obj =  _localctx._tanh.obj;
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 14);
				{
				State = 159; _localctx._ln = ln();
				_localctx.obj =  _localctx._ln.obj;
				}
				break;
			case T__22:
				EnterOuterAlt(_localctx, 15);
				{
				State = 162; _localctx._log = log();
				_localctx.obj =  _localctx._log.obj;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CosContext : ParserRuleContext {
		public double obj;
		public ExprContext _expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cos; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterCos(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitCos(this);
		}
	}

	[RuleVersion(0)]
	public CosContext cos() {
		CosContext _localctx = new CosContext(Context, State);
		EnterRule(_localctx, 20, RULE_cos);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; Match(T__7);
			State = 168; Match(T__0);
			State = 169; _localctx._expr = expr(0);
			State = 170; Match(T__1);
			_localctx.obj =  Math.Cos(_localctx._expr.obj);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SinContext : ParserRuleContext {
		public double obj;
		public ExprContext _expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public SinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sin; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterSin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitSin(this);
		}
	}

	[RuleVersion(0)]
	public SinContext sin() {
		SinContext _localctx = new SinContext(Context, State);
		EnterRule(_localctx, 22, RULE_sin);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173; Match(T__8);
			State = 174; Match(T__0);
			State = 175; _localctx._expr = expr(0);
			State = 176; Match(T__1);
			_localctx.obj =  Math.Sin(_localctx._expr.obj);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TanContext : ParserRuleContext {
		public double obj;
		public ExprContext _expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public TanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tan; } }
		public override void EnterRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.EnterTan(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IfunctionListener typedListener = listener as IfunctionListener;
			if (typedListener != null) typedListener.ExitTan(this);
		}
	}
